[gd_scene load_steps=14 format=3 uid="uid://13ymb564b1pa"]

[ext_resource type="Script" path="res://player.gd" id="1_f7p6e"]
[ext_resource type="Script" path="res://WeaponHandler.gd" id="2_g8slx"]
[ext_resource type="Texture2D" uid="uid://cvxt3t2pf6k34" path="res://damage.png" id="3_3wq1u"]
[ext_resource type="Script" path="res://ammo_handler.gd" id="3_gppit"]
[ext_resource type="Script" path="res://Levels/Crosshair.gd" id="4_b4jmx"]
[ext_resource type="PackedScene" uid="uid://buaahrun0ejb7" path="res://UI/buy_screen.tscn" id="6_48p7s"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lcc2h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xuw51"]

[sub_resource type="Animation" id="Animation_mg02r"]
length = 0.001

[sub_resource type="Animation" id="Animation_jxm6x"]
resource_name = "shoot"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43d1k"]
_data = {
"RESET": SubResource("Animation_mg02r"),
"shoot": SubResource("Animation_jxm6x")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_4it58"]
properties/0/path = NodePath("Camera3D:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Camera3D:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_jwfes"]
font_size = 64
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19485, 0, 0)
script = ExtResource("1_f7p6e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.993234, 0)
mesh = SubResource("CapsuleMesh_lcc2h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.993234, 0)
shape = SubResource("CapsuleShape3D_xuw51")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35885, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="WeaponHandler" type="Node3D" parent="Camera3D"]
script = ExtResource("2_g8slx")

[node name="AmmoHandler" type="Node" parent="Camera3D" node_paths=PackedStringArray("ammo_label", "weapon_handler")]
unique_name_in_owner = true
script = ExtResource("3_gppit")
ammo_label = NodePath("../../HUD/AmmoBar")
weapon_handler = NodePath("../WeaponHandler")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_3wq1u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_43d1k")
}
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_4it58")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="Control" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("4_b4jmx")

[node name="BuyScreen" parent="." instance=ExtResource("6_48p7s")]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 17.0
offset_top = 557.0
offset_right = 135.0
offset_bottom = 645.0
label_settings = SubResource("LabelSettings_jwfes")

[node name="AmmoBar" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 1006.0
offset_top = 554.0
offset_right = 1124.0
offset_bottom = 642.0
label_settings = SubResource("LabelSettings_jwfes")

[node name="Node3D" type="Node3D" parent="."]
